fixed mobile bug where image would stretch vertically

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h1 {
 
 .btnIcon {
   margin-right: 0.5rem;
+  max-width: 15px;
 }
 
 @media (min-width: 42em) {
